<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv show</string>
    <string name="poster">Image poster</string>
    <string name="title">Title</string>
    <string name="release_date">Release date : %s</string>
    <string name="btn_share">Button share</string>
    <string name="btn_open">Button open homepage</string>
    <string name="link">Open Link %s</string>
    <string name="share_movies">Share link movies The Movie DB</string>
    <string name="share_tv_show">Share link tv show The Movie DB</string>
    <string name="poster_path">https://image.tmdb.org/t/p/w500</string>
    <string name="movie_share_link">https://www.themoviedb.org/movie/%d</string>
    <string name="tv_show_share_link">https://www.themoviedb.org/tv/%d</string>
    <string name="first_air_date">First air date : %s</string>
    <string name="runtime">Duration : %d</string>
    <string name="_5_0">5.0</string>
    <string name="original_language">Language : %s</string>
    <string name="backdoor_path">Backdoor Image</string>
    <string name="genre">Genre :</string>
    <string name="production_companies">Production Companies</string>
    <string name="network">Networks</string>
    <string name="status">Status : %s</string>
    <string name="origin_country">Origin Country</string>
    <string name="collection_null">Movie Collection %s Null</string>
    <string name="air_date">Air date : %s</string>
    <string name="episode_number">Episode : %d</string>
    <string name="season_number">Season : %d</string>
    <string name="last_episode_to_air">Tv Show Last Episode To Air</string>
    <string name="air_null">Tv Show Last Episode To Air %s Null</string>
    <string name="episodeRuntime">Duration per episode : %d</string>
    <string name="belong_to_collection">Movie Collection</string>
    <string name="overview">Overview : %s</string>
    <string name="gender">Gender : %s</string>
    <string name="name">Name</string>
    <string name="episode_count">Episode count : %d</string>
    <string name="vote_count">Vote count : %d</string>
    <string name="production_code">Production code : %d</string>
    <string name="created_by">Created by</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="seasons">Seasons</string>
    <string name="production_countries">Production Countries</string>
    <string name="spoken_languages">Spoken Languages</string>
</resources>