<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_horizontal"
    android:padding="@dimen/margin_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_by_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_by_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_by_name"
        tools:text="@string/gender" />

    <TextView
        android:id="@+id/tv_by_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_by_profile_path"
        app:layout_constraintTop_toTopOf="@+id/img_by_profile_path"
        tools:text="@string/name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_by_profile_path"
        android:layout_width="@dimen/poster_width"
        android:layout_height="@dimen/poster_height"
        android:contentDescription="@string/poster"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundSquare"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_by_original_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_by_profile_path"
        app:layout_constraintStart_toStartOf="@+id/tv_by_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_by_gender"
        tools:text="@string/original_language" />

</androidx.constraintlayout.widget.ConstraintLayout>